fix button spacing on safari

--- a/skalene.css
+++ b/skalene.css
@@ -132,6 +132,7 @@
   border-radius: 4px;
   padding: 4px 8px;
   cursor: pointer;
+  margin: 0;
 }
 
 .sk-button:focus {
